--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.6.1
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.8
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
