--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.8
   get_storage: ^2.0.3
+  intl: ^0.17.0
+  
 
 dev_dependencies:
   flutter_test:
