--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cloud_firestore: ^3.1.8
   get_storage: ^2.0.3
   intl: ^0.17.0
+  flutter_speed_dial: ^5.0.0+1
+  url_launcher: ^6.0.20
   
 
 dev_dependencies:
