--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   connectivity_plus: ^2.2.1
   connectivity: ^3.0.6
   popover: ^0.2.6+3
+  flutter_spinkit: ^5.1.0
+  fluttertoast: ^8.0.8
   
 
 dev_dependencies:
